--- a/23120057_main.css
+++ b/23120057_main.css
@@ -104,6 +104,7 @@ h1, h2 {
     padding: 0.5em;
 
     height: 44px;
+    background: linear-gradient(to bottom, rgb(206, 209, 247), rgb(132, 138, 209));
 }
 
 .container-header-middle {
