--- a/23120057_main.css
+++ b/23120057_main.css
@@ -37,6 +37,7 @@ h1, h2 {
     width: 100%;
     height: 44px;
 
+    background: linear-gradient(to bottom, rgb(98, 148, 231), rgb(141, 184, 249));
 }
 
 
@@ -160,6 +161,7 @@ h1, h2 {
   border: 2px solid #6b7ce0;
   border-radius: 8px;
   padding: 4px 8px;
+  background: linear-gradient(to bottom, #dce1ff, #bfc8f2);
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
   width: 120px;
 }
@@ -169,6 +171,7 @@ h1, h2 {
   position: absolute;
   right: 8px;
   font-size: 10px;
+  color: gray;
   pointer-events: none;
 }
 
@@ -201,6 +204,8 @@ h1, h2 {
 
 /* Highlighted text */
 .highlight {
+    background-color: yellow;
+    color: black;
 }
 
 
