--- a/23120057_main.css
+++ b/23120057_main.css
@@ -277,10 +277,9 @@ h1, h2 {
 }
 
 .container-drag-drop {
-
     padding: 1em;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 1em;
 }
 
@@ -290,27 +289,47 @@ h1, h2 {
     height: 75px;
 }
 
+.grid-item {
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
+}
+
 .drag-grid-item {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 60px;
-  height: 60px;
+  width: 120px;
+  height: 120px;
   margin: 6px;
-  background: #f3f3f3;
   border-radius: 10px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
   font-size: 2em;
   cursor: pointer;
 }
-.drag-grid-item .label {
+.drag-grid-item {
+  font-family: Arial, sans-serif;
   font-size: 0.7em;
-  color: #333;
-  margin-top: 2px;
+  margin-top: 2em;
 }
-.drag-grid-item .icon {
+.label {
+    margin: 0;
+    font-size: 0.5em;
+}
+.drag-grid-item {
   font-size: 2em;
+}
+.icon {
+    width: 100px;
+    height: 75px;
+    text-align: center;
+    font-size: 1em;
+
+    border-radius: 0.5em;
+
+    background: radial-gradient(circle, rgb(178, 197, 254), rgb(23, 123, 223));
 }
 .container-drag-drop {
   display: flex;
