--- a/23120057_main.css
+++ b/23120057_main.css
@@ -302,7 +302,6 @@ h1, h2 {
   border-radius: 10px;
   font-size: 2em;
   cursor: pointer;
-  transition: transform 0.2s;
 }
 
 .label {
@@ -330,6 +329,11 @@ h1, h2 {
 }
 
 .drag-grid-placeholder {
+  border: 3px dashed #6b7ce0;
+  background: #eaf0ff;
+  border-radius: 10px;
+  min-width: 60px;
+  min-height: 60px;
   margin: 6px;
   box-sizing: border-box;
   transition: all 0.4s;
@@ -399,9 +403,3 @@ h1, h2 {
         align-items: center;
     }
 }
-
-
-
-
-
-
